--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Rubik');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Rubik', sans-serif;
+}
+
 .visually-hidden {
   border: 0;
   clip: rect(0 0 0 0);
